# MIPT-networked

./: .gitmodules
w2/: CMakeLists.txt  client.cpp  lobby.cpp  output.h  player.h  server.cpp
w4/: CMakeLists.txt  entity.h  main.cpp  protocol.cpp  protocol.h  serialise.h  server.cpp
w5/: CMakeLists.txt  entity.cpp  entity.h  main.cpp  protocol.cpp  protocol.h  server.cpp
